Inserting the latest language strings.
git-svn-id: https://ut.svn.beanstalkapp.com/ngfw/work/src@24649 8ebf8b4e-06f3-0310-961f-89f74618be54

--- a/firewall/po/es/untangle-node-firewall.po
+++ b/firewall/po/es/untangle-node-firewall.po
@@ -6,7 +6,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Untangle\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2009-09-14 14:39-0700\n"
+"POT-Creation-Date: 2009-09-29 17:57-0700\n"
 "PO-Revision-Date: 2008-11-24 15:47-0700\n"
 "Last-Translator: David Russi <dprussi@qwest.net>\n"
 "Language-Team: Spanish <dprussi@qwest.net>\n"
@@ -16,6 +16,217 @@ msgstr ""
 "Plural-Forms: nplurals=1; plural=0;\n"
 "X-Generator: Translate Toolkit 1.1.1\n"
 "X-Poedit-Language: Spanish\n"
+
+#: ../hier/usr/share/untangle/web/webui/script/untangle-node-firewall/settings.js:24
+msgid "Enable"
+msgstr "Habilitar"
+
+#: ../hier/usr/share/untangle/web/webui/script/untangle-node-firewall/settings.js:29
+#: ../hier/usr/share/untangle/web/webui/script/untangle-node-firewall/settings.js:382
+msgid "Pass"
+msgstr "Permitir"
+
+#: ../hier/usr/share/untangle/web/webui/script/untangle-node-firewall/settings.js:29
+#: ../hier/usr/share/untangle/web/webui/script/untangle-node-firewall/settings.js:369
+msgid "Block"
+msgstr "Bloquear"
+
+#: ../hier/usr/share/untangle/web/webui/script/untangle-node-firewall/settings.js:37
+#: ../hier/usr/share/untangle/web/webui/script/untangle-node-firewall/settings.js:117
+msgid "Rules"
+msgstr "Reglas"
+
+#: ../hier/usr/share/untangle/web/webui/script/untangle-node-firewall/settings.js:90
+msgid "Note"
+msgstr ""
+
+#: ../hier/usr/share/untangle/web/webui/script/untangle-node-firewall/settings.js:93
+msgid ""
+" <b>Firewall</b> is a simple application designed to block and log network "
+"traffic based on a set of rules. To learn more click on the <b>Help</b> "
+"button below.<br/> Routing and Port Forwarding functionality can be found "
+"elsewhere in Config->Networking."
+msgstr ""
+
+#: ../hier/usr/share/untangle/web/webui/script/untangle-node-firewall/settings.js:112
+msgid "[no name]"
+msgstr "[sin nombre]"
+
+#: ../hier/usr/share/untangle/web/webui/script/untangle-node-firewall/settings.js:113
+msgid "[no category]"
+msgstr "[sin categoría]"
+
+#: ../hier/usr/share/untangle/web/webui/script/untangle-node-firewall/settings.js:114
+msgid "[no description]"
+msgstr "[sin descripción]"
+
+#: ../hier/usr/share/untangle/web/webui/script/untangle-node-firewall/settings.js:153
+#: ../hier/usr/share/untangle/web/webui/script/untangle-node-firewall/settings.js:282
+msgid "Description"
+msgstr "Descripción"
+
+#: ../hier/usr/share/untangle/web/webui/script/untangle-node-firewall/settings.js:241
+msgid "Warning"
+msgstr "Atención"
+
+#: ../hier/usr/share/untangle/web/webui/script/untangle-node-firewall/settings.js:241
+msgid "The form is not valid!"
+msgstr "¡El formulario no es válido!"
+
+#: ../hier/usr/share/untangle/web/webui/script/untangle-node-firewall/settings.js:276
+#, fuzzy
+msgid "Enable Rule"
+msgstr "Habilitar"
+
+#: ../hier/usr/share/untangle/web/webui/script/untangle-node-firewall/settings.js:288
+#: ../hier/usr/lib/python2.5/reports/node/untangle_node_firewall.py:443
+msgid "Action"
+msgstr "Medida"
+
+#: ../hier/usr/share/untangle/web/webui/script/untangle-node-firewall/settings.js:306
+msgid "Log"
+msgstr "Log"
+
+#: ../hier/usr/share/untangle/web/webui/script/untangle-node-firewall/settings.js:309
+#, fuzzy
+msgid "Rule"
+msgstr "Reglas"
+
+#: ../hier/usr/share/untangle/web/webui/script/untangle-node-firewall/settings.js:317
+msgid "Traffic Type"
+msgstr "Tipo de tráfico"
+
+#: ../hier/usr/share/untangle/web/webui/script/untangle-node-firewall/settings.js:322
+msgid "Source Interface"
+msgstr "Interfaz de origen"
+
+#: ../hier/usr/share/untangle/web/webui/script/untangle-node-firewall/settings.js:328
+msgid "Destination Interface"
+msgstr "Interfaz de destino"
+
+#: ../hier/usr/share/untangle/web/webui/script/untangle-node-firewall/settings.js:334
+msgid "Source Address"
+msgstr "Dirección de origen"
+
+#: ../hier/usr/share/untangle/web/webui/script/untangle-node-firewall/settings.js:342
+msgid "Destination Address"
+msgstr "Dirección de destino"
+
+#: ../hier/usr/share/untangle/web/webui/script/untangle-node-firewall/settings.js:349
+#: ../hier/usr/lib/python2.5/reports/node/untangle_node_firewall.py:445
+msgid "Source Port"
+msgstr "Puerto de origen"
+
+#: ../hier/usr/share/untangle/web/webui/script/untangle-node-firewall/settings.js:356
+#: ../hier/usr/lib/python2.5/reports/node/untangle_node_firewall.py:447
+msgid "Destination Port"
+msgstr "Puerto de destino"
+
+#: ../hier/usr/share/untangle/web/webui/script/untangle-node-firewall/settings.js:366
+msgid "Default Action"
+msgstr "Medida predeterminada"
+
+#: ../hier/usr/share/untangle/web/webui/script/untangle-node-firewall/settings.js:412
+#: ../hier/usr/lib/python2.5/reports/node/untangle_node_firewall.py:245
+msgid "blocked"
+msgstr "bloqueado"
+
+#: ../hier/usr/share/untangle/web/webui/script/untangle-node-firewall/settings.js:412
+msgid "passed"
+msgstr "permitido"
+
+#: ../hier/usr/share/untangle/web/webui/script/untangle-node-firewall/settings.js:426
+msgid "timestamp"
+msgstr "fecha y hora"
+
+#: ../hier/usr/share/untangle/web/webui/script/untangle-node-firewall/settings.js:434
+msgid "action"
+msgstr "medida"
+
+#: ../hier/usr/share/untangle/web/webui/script/untangle-node-firewall/settings.js:439
+#, fuzzy
+msgid "client"
+msgstr "cliente"
+
+#: ../hier/usr/share/untangle/web/webui/script/untangle-node-firewall/settings.js:446
+msgid "reason for action"
+msgstr "motivo de la medida tomada"
+
+#: ../hier/usr/share/untangle/web/webui/script/untangle-node-firewall/settings.js:451
+msgid "rule #{0}"
+msgstr "regla núm. {0}"
+
+#: ../hier/usr/share/untangle/web/webui/script/untangle-node-firewall/settings.js:454
+#, fuzzy
+msgid "server"
+msgstr "servidor"
+
+#: ../hier/usr/share/untangle/web/webui/script/untangle-node-firewall/settings.js:506
+msgid "Invalid address specified for Source Address"
+msgstr "Ha especificado una dirección no válida para la dirección de origen."
+
+#: ../hier/usr/share/untangle/web/webui/script/untangle-node-firewall/settings.js:509
+msgid "Invalid address specified for Destination Address"
+msgstr "Ha especificado una dirección no válida para la dirección de destino."
+
+#: ../hier/usr/share/untangle/web/webui/script/untangle-node-firewall/settings.js:512
+msgid "Invalid port specified for Source Port"
+msgstr "Ha especificado un puerto no válido para el puerto de origen."
+
+#: ../hier/usr/share/untangle/web/webui/script/untangle-node-firewall/settings.js:515
+msgid "Invalid port specified for Destination Port"
+msgstr "Ha especificado un puerto no válido para el puerto de destino."
+
+#: ../hier/usr/share/untangle/web/webui/script/untangle-node-firewall/settings.js:520
+msgid "Validation failed"
+msgstr "Error de validación"
+
+#: ../hier/usr/share/untangle/web/webui/script/untangle-node-firewall/settings.js:526
+#, fuzzy
+msgid "Please Try Again"
+msgstr "Espere"
+
+#: ../hier/usr/share/untangle/web/webui/script/untangle-node-firewall/settings.js:529
+msgid "Failed"
+msgstr "Falló"
+
+#: ../hier/usr/share/untangle/web/webui/script/untangle-node-firewall/settings.js:539
+msgid "Saving..."
+msgstr "Guardando..."
+
+#: ../hier/usr/share/untangle/web/webui/script/untangle-node-firewall/settings.js:539
+msgid "Please wait"
+msgstr "Espere"
+
+#: ../impl/com/untangle/node/firewall/FirewallAllFilter.java:27
+#: ../hier/usr/lib/python2.5/reports/node/untangle_node_firewall.py:429
+msgid "Firewall Events"
+msgstr "Eventos de cortafuegos"
+
+#: ../impl/com/untangle/node/firewall/FirewallBlockedFilter.java:27
+#, fuzzy
+msgid "Firewall Block Events"
+msgstr "Eventos de cortafuegos"
+
+#: ../impl/com/untangle/node/firewall/FirewallImpl.java:93
+msgid "Sessions blocked"
+msgstr "Sesiones bloqueadas"
+
+#: ../impl/com/untangle/node/firewall/FirewallImpl.java:93
+msgid "BLOCK"
+msgstr "BLOQUEAR"
+
+#: ../impl/com/untangle/node/firewall/FirewallImpl.java:94
+msgid "Sessions passed"
+msgstr "Sesiones permitidas"
+
+#: ../impl/com/untangle/node/firewall/FirewallImpl.java:94
+msgid "PASS"
+msgstr "PERMITIR"
+
+#: ../impl/com/untangle/node/firewall/FirewallImpl.java:95
+msgid "Sessions logged"
+msgstr "Sesiones registradas"
 
 #: ../hier/usr/lib/python2.5/reports/node/untangle_node_firewall.py:71
 msgid "Summary Report"
@@ -59,10 +270,6 @@ msgstr ""
 #: ../hier/usr/lib/python2.5/reports/node/untangle_node_firewall.py:244
 #, fuzzy
 msgid "logged"
-msgstr "bloqueado"
-
-#: ../hier/usr/lib/python2.5/reports/node/untangle_node_firewall.py:245
-msgid "blocked"
 msgstr "bloqueado"
 
 #: ../hier/usr/lib/python2.5/reports/node/untangle_node_firewall.py:253
@@ -118,10 +325,6 @@ msgstr ""
 msgid "User"
 msgstr "servidor"
 
-#: ../hier/usr/lib/python2.5/reports/node/untangle_node_firewall.py:429
-msgid "Firewall Events"
-msgstr "Eventos de cortafuegos"
-
 #: ../hier/usr/lib/python2.5/reports/node/untangle_node_firewall.py:435
 msgid "Time"
 msgstr ""
@@ -135,138 +338,15 @@ msgstr "cliente"
 msgid "Rule Applied"
 msgstr ""
 
-#: ../hier/usr/lib/python2.5/reports/node/untangle_node_firewall.py:443
-msgid "Action"
-msgstr "Medida"
-
 #: ../hier/usr/lib/python2.5/reports/node/untangle_node_firewall.py:444
 #, fuzzy
 msgid "Source IP"
-msgstr "Puerto de origen"
-
-#: ../hier/usr/lib/python2.5/reports/node/untangle_node_firewall.py:445
-msgid "Source Port"
 msgstr "Puerto de origen"
 
 #: ../hier/usr/lib/python2.5/reports/node/untangle_node_firewall.py:446
 #, fuzzy
 msgid "Destination IP"
 msgstr "Puerto de destino"
-
-#: ../hier/usr/lib/python2.5/reports/node/untangle_node_firewall.py:447
-msgid "Destination Port"
-msgstr "Puerto de destino"
-
-#, fuzzy
-#~ msgid "Server"
-#~ msgstr "servidor"
-
-#~ msgid "Enable"
-#~ msgstr "Habilitar"
-
-#~ msgid "Pass"
-#~ msgstr "Permitir"
-
-#~ msgid "Block"
-#~ msgstr "Bloquear"
-
-#~ msgid "Rules"
-#~ msgstr "Reglas"
-
-#~ msgid "[no name]"
-#~ msgstr "[sin nombre]"
-
-#~ msgid "[no category]"
-#~ msgstr "[sin categoría]"
-
-#~ msgid "[no description]"
-#~ msgstr "[sin descripción]"
-
-#~ msgid "Description"
-#~ msgstr "Descripción"
-
-#~ msgid "Warning"
-#~ msgstr "Atención"
-
-#~ msgid "The form is not valid!"
-#~ msgstr "¡El formulario no es válido!"
-
-#~ msgid "Log"
-#~ msgstr "Log"
-
-#~ msgid "Traffic Type"
-#~ msgstr "Tipo de tráfico"
-
-#~ msgid "Source Interface"
-#~ msgstr "Interfaz de origen"
-
-#~ msgid "Destination Interface"
-#~ msgstr "Interfaz de destino"
-
-#~ msgid "Source Address"
-#~ msgstr "Dirección de origen"
-
-#~ msgid "Destination Address"
-#~ msgstr "Dirección de destino"
-
-#~ msgid "Default Action"
-#~ msgstr "Medida predeterminada"
-
-#~ msgid "passed"
-#~ msgstr "permitido"
-
-#~ msgid "timestamp"
-#~ msgstr "fecha y hora"
-
-#~ msgid "action"
-#~ msgstr "medida"
-
-#~ msgid "reason for action"
-#~ msgstr "motivo de la medida tomada"
-
-#~ msgid "rule #{0}"
-#~ msgstr "regla núm. {0}"
-
-#~ msgid "Invalid address specified for Source Address"
-#~ msgstr ""
-#~ "Ha especificado una dirección no válida para la dirección de origen."
-
-#~ msgid "Invalid address specified for Destination Address"
-#~ msgstr ""
-#~ "Ha especificado una dirección no válida para la dirección de destino."
-
-#~ msgid "Invalid port specified for Source Port"
-#~ msgstr "Ha especificado un puerto no válido para el puerto de origen."
-
-#~ msgid "Invalid port specified for Destination Port"
-#~ msgstr "Ha especificado un puerto no válido para el puerto de destino."
-
-#~ msgid "Validation failed"
-#~ msgstr "Error de validación"
-
-#~ msgid "Failed"
-#~ msgstr "Falló"
-
-#~ msgid "Saving..."
-#~ msgstr "Guardando..."
-
-#~ msgid "Please wait"
-#~ msgstr "Espere"
-
-#~ msgid "Sessions blocked"
-#~ msgstr "Sesiones bloqueadas"
-
-#~ msgid "BLOCK"
-#~ msgstr "BLOQUEAR"
-
-#~ msgid "Sessions passed"
-#~ msgstr "Sesiones permitidas"
-
-#~ msgid "PASS"
-#~ msgstr "PERMITIR"
-
-#~ msgid "Sessions logged"
-#~ msgstr "Sesiones registradas"
 
 #~ msgid "Category"
 #~ msgstr "Categoría"
