--- a/shield/po/pt_BR/untangle-node-shield.po
+++ b/shield/po/pt_BR/untangle-node-shield.po
@@ -6,7 +6,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Untangle\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2009-09-15 14:27-0700\n"
+"POT-Creation-Date: 2009-09-29 17:57-0700\n"
 "PO-Revision-Date: 2008-11-24 19:12-0800\n"
 "Last-Translator: Claudia\n"
 "Language-Team: Portuguese <claudia@englishtoportuguese.com>\n"
@@ -16,6 +16,130 @@ msgstr ""
 "Plural-Forms: nplurals=1; plural=0;\n"
 "X-Generator: Translate Toolkit 1.1.1\n"
 "X-Poedit-Language: Portuguese\n"
+
+#: ../hier/usr/share/untangle/web/webui/script/untangle-node-shield/settings.js:20
+#: ../hier/usr/share/untangle/web/webui/script/untangle-node-shield/settings.js:32
+msgid "Status"
+msgstr "Status"
+
+#: ../hier/usr/share/untangle/web/webui/script/untangle-node-shield/settings.js:28
+msgid "Statistics"
+msgstr "Estatísticas"
+
+#: ../hier/usr/share/untangle/web/webui/script/untangle-node-shield/settings.js:35
+msgid "active"
+msgstr "ativo"
+
+#: ../hier/usr/share/untangle/web/webui/script/untangle-node-shield/settings.js:35
+msgid "inactive"
+msgstr "inativo"
+
+#: ../hier/usr/share/untangle/web/webui/script/untangle-node-shield/settings.js:43
+msgid "Note"
+msgstr "Nota"
+
+#: ../hier/usr/share/untangle/web/webui/script/untangle-node-shield/settings.js:47
+msgid ""
+"Attack Blocker is a heuristic based intrusion prevention and requires no "
+"configuration. Users can modify the treatment of certain IP and/or networks "
+"on the exception tab."
+msgstr ""
+"O Attack Blocker (Bloqueador de ataque) é uma prevenção da invasão baseada "
+"em heurística e não requer qualquer configuração. Os usuários podem "
+"modificar o tratamento de certos IP e/ou redes na guia de exceções."
+
+#: ../hier/usr/share/untangle/web/webui/script/untangle-node-shield/settings.js:55
+msgid "enable"
+msgstr "habilitar"
+
+#: ../hier/usr/share/untangle/web/webui/script/untangle-node-shield/settings.js:60
+#: ../hier/usr/share/untangle/web/webui/script/untangle-node-shield/settings.js:61
+msgid "users"
+msgstr "usuários"
+
+#: ../hier/usr/share/untangle/web/webui/script/untangle-node-shield/settings.js:61
+msgid "unlimited"
+msgstr "ilimitado"
+
+#: ../hier/usr/share/untangle/web/webui/script/untangle-node-shield/settings.js:74
+msgid "[no description]"
+msgstr "[nenhuma descrição]"
+
+#: ../hier/usr/share/untangle/web/webui/script/untangle-node-shield/settings.js:76
+msgid "Exceptions"
+msgstr "Exceções"
+
+#: ../hier/usr/share/untangle/web/webui/script/untangle-node-shield/settings.js:101
+msgid "address"
+msgstr "endereço"
+
+#: ../hier/usr/share/untangle/web/webui/script/untangle-node-shield/settings.js:111
+msgid "user count"
+msgstr "contagem de usuário"
+
+#: ../hier/usr/share/untangle/web/webui/script/untangle-node-shield/settings.js:137
+msgid "description"
+msgstr "descrição"
+
+#: ../hier/usr/share/untangle/web/webui/script/untangle-node-shield/settings.js:151
+msgid "Enable"
+msgstr "Habilitar"
+
+#: ../hier/usr/share/untangle/web/webui/script/untangle-node-shield/settings.js:155
+msgid "Address"
+msgstr "Endereço"
+
+#: ../hier/usr/share/untangle/web/webui/script/untangle-node-shield/settings.js:162
+msgid "User Count"
+msgstr "Contagem de usuário"
+
+#: ../hier/usr/share/untangle/web/webui/script/untangle-node-shield/settings.js:177
+msgid "Description"
+msgstr "Descrição"
+
+#: ../hier/usr/share/untangle/web/webui/script/untangle-node-shield/settings.js:213
+msgid "timestamp"
+msgstr "marcação de horário"
+
+#: ../hier/usr/share/untangle/web/webui/script/untangle-node-shield/settings.js:221
+msgid "source"
+msgstr "origem"
+
+#: ../hier/usr/share/untangle/web/webui/script/untangle-node-shield/settings.js:227
+msgid "source interface"
+msgstr "interface de origem"
+
+#: ../hier/usr/share/untangle/web/webui/script/untangle-node-shield/settings.js:232
+msgid "reputation"
+msgstr "reputação"
+
+#: ../hier/usr/share/untangle/web/webui/script/untangle-node-shield/settings.js:240
+#: ../hier/usr/lib/python2.5/reports/node/untangle_node_shield.py:182
+#: ../hier/usr/lib/python2.5/reports/node/untangle_node_shield.py:268
+msgid "limited"
+msgstr "limitado"
+
+#: ../hier/usr/share/untangle/web/webui/script/untangle-node-shield/settings.js:248
+#, fuzzy
+msgid "dropped"
+msgstr "abandonado"
+
+#: ../hier/usr/share/untangle/web/webui/script/untangle-node-shield/settings.js:256
+#, fuzzy
+msgid "reject"
+msgstr "rejeitar"
+
+#: ../hier/usr/share/untangle/web/webui/script/untangle-node-shield/settings.js:271
+msgid "Saving..."
+msgstr "Salvando..."
+
+#: ../hier/usr/share/untangle/web/webui/script/untangle-node-shield/settings.js:271
+msgid "Please wait"
+msgstr "Aguarde"
+
+#: ../impl/com/untangle/node/shield/LogIteration.java:194
+msgid "type"
+msgstr "tipo"
 
 #: ../hier/usr/lib/python2.5/reports/node/untangle_node_shield.py:82
 msgid "Summary Report"
@@ -71,11 +195,6 @@ msgstr ""
 msgid "accepted"
 msgstr ""
 
-#: ../hier/usr/lib/python2.5/reports/node/untangle_node_shield.py:182
-#: ../hier/usr/lib/python2.5/reports/node/untangle_node_shield.py:268
-msgid "limited"
-msgstr "limitado"
-
 #: ../hier/usr/lib/python2.5/reports/node/untangle_node_shield.py:183
 msgid "blocked"
 msgstr ""
@@ -120,84 +239,3 @@ msgstr "abandonado"
 #, fuzzy
 msgid "Rejected"
 msgstr "rejeitar"
-
-#~ msgid "Status"
-#~ msgstr "Status"
-
-#~ msgid "Statistics"
-#~ msgstr "Estatísticas"
-
-#~ msgid "active"
-#~ msgstr "ativo"
-
-#~ msgid "inactive"
-#~ msgstr "inativo"
-
-#~ msgid "Note"
-#~ msgstr "Nota"
-
-#~ msgid ""
-#~ "Attack Blocker is a heuristic based intrusion prevention and requires no "
-#~ "configuration. Users can modify the treatment of certain IP and/or "
-#~ "networks on the exception tab."
-#~ msgstr ""
-#~ "O Attack Blocker (Bloqueador de ataque) é uma prevenção da invasão "
-#~ "baseada em heurística e não requer qualquer configuração. Os usuários "
-#~ "podem modificar o tratamento de certos IP e/ou redes na guia de exceções."
-
-#~ msgid "enable"
-#~ msgstr "habilitar"
-
-#~ msgid "users"
-#~ msgstr "usuários"
-
-#~ msgid "unlimited"
-#~ msgstr "ilimitado"
-
-#~ msgid "[no description]"
-#~ msgstr "[nenhuma descrição]"
-
-#~ msgid "Exceptions"
-#~ msgstr "Exceções"
-
-#~ msgid "address"
-#~ msgstr "endereço"
-
-#~ msgid "user count"
-#~ msgstr "contagem de usuário"
-
-#~ msgid "description"
-#~ msgstr "descrição"
-
-#~ msgid "Enable"
-#~ msgstr "Habilitar"
-
-#~ msgid "Address"
-#~ msgstr "Endereço"
-
-#~ msgid "User Count"
-#~ msgstr "Contagem de usuário"
-
-#~ msgid "Description"
-#~ msgstr "Descrição"
-
-#~ msgid "timestamp"
-#~ msgstr "marcação de horário"
-
-#~ msgid "source"
-#~ msgstr "origem"
-
-#~ msgid "source interface"
-#~ msgstr "interface de origem"
-
-#~ msgid "reputation"
-#~ msgstr "reputação"
-
-#~ msgid "Saving..."
-#~ msgstr "Salvando..."
-
-#~ msgid "Please wait"
-#~ msgstr "Aguarde"
-
-#~ msgid "type"
-#~ msgstr "tipo"
